--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -24,44 +24,9 @@
     "from pprint import pprint\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from api_keys import weather_api_key\n",
     "from citipy import citipy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#api.openweathermap.org/data/2.5/forecast?id=524901&APPID=api_keys\n",
-    "\n",
-    "#url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
-    "url = \"http://api.openweathermap.org/data/2.5/forecast?id=524901&\"\n",
-    "city = \"Houston\"\n",
-    "units = \"imperial\"\n",
-    "\n",
-    "# Build query URL\n",
-    "query_url = url + \"appid=\" + weather_api_key #+ \"&q=\" + city #+\"&units=\" + units"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weather_response = requests.get(query_url)\n",
-    "weather_json = weather_response.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pprint(weather_json)"
    ]
   },
   {
@@ -73,28 +38,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "643"
+       "['airai']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Setting up initial lists for pull + # of requests\n",
     "city_list = []\n",
-    "coordlat = []\n",
-    "coordlong = []\n",
+    "pullsize = 1\n",
     "\n",
-    "coord1 = np.random.uniform(low=-90.000000, high=90.000000, size=500)\n",
-    "coord2 = np.random.uniform(low=-180.000000, high=180.000000, size=500)"
+    "# Generating random Lat/Long coordinates to populate cities into list\n",
+    "for x in range(0,pullsize):\n",
+    "    coord1 = np.random.uniform(low=-90.000000, high=90.000000)\n",
+    "    coord2 = np.random.uniform(low=-180.000000, high=180.000000)\n",
+    "    city = citipy.nearest_city(coord1, coord2)\n",
+    "    city_list.append(city.city_name)\n",
+    "\n",
+    "city_list    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [City, Lat, Lng, Max Temp, Humidity, Cloudiness, Wind Speed, Country, Date]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Setting up initial DataFrame\n",
+    "init_df = pd.DataFrame(columns = [\"City\",\"Lat\",\"Lng\",\"Max Temp\",\"Humidity\",\"Cloudiness\",\"Wind Speed\",\"Country\",\"Date\"])\n",
+    "init_df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -103,6 +140,29 @@
     "### Perform API Calls\n",
     "* Perform a weather check on each city using a series of successive API calls.\n",
     "* Include a print log of each city as it'sbeing processed (with the city number and city name).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for city_list in city_list:\n",
+    "\n",
+    "query_url = url + \"appid=\" + weather_api_key + \"&q=\" + str(city.city_name)\n",
+    "    pulloutput = requests.get(query_url)\n",
+    "    newrow = {\"City\": ,\n",
+    "             \"Lat\": ,\n",
+    "             \"Lng\": ,\n",
+    "             \"Max Temp\": ,\n",
+    "             \"Humidity\": ,\n",
+    "             \"Cloudiness\": ,\n",
+    "             \"Wind Speed\": ,\n",
+    "             \"Country\": ,\n",
+    "             \"Date\": ,\n",
+    "             }\n",
+    "\n"
    ]
   },
   {
