--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Richards Bay</td>\n",
+       "      <td>-28.78</td>\n",
+       "      <td>32.04</td>\n",
+       "      <td>291.82</td>\n",
+       "      <td>71</td>\n",
+       "      <td>74</td>\n",
+       "      <td>2.73</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1600185697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ushuaia</td>\n",
+       "      <td>-54.80</td>\n",
+       "      <td>-68.30</td>\n",
+       "      <td>276.15</td>\n",
+       "      <td>74</td>\n",
+       "      <td>75</td>\n",
+       "      <td>12.90</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>1600185219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Riyadh</td>\n",
+       "      <td>24.69</td>\n",
+       "      <td>46.72</td>\n",
+       "      <td>312.15</td>\n",
+       "      <td>12</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>SA</td>\n",
+       "      <td>1600185136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Palauig</td>\n",
+       "      <td>15.44</td>\n",
+       "      <td>119.90</td>\n",
+       "      <td>300.46</td>\n",
+       "      <td>76</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>1600185698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Praia</td>\n",
+       "      <td>14.92</td>\n",
+       "      <td>-23.51</td>\n",
+       "      <td>301.32</td>\n",
+       "      <td>71</td>\n",
+       "      <td>64</td>\n",
+       "      <td>3.18</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>1600185698</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           City    Lat     Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
+       "0  Richards Bay -28.78   32.04    291.82        71          74        2.73   \n",
+       "1       Ushuaia -54.80  -68.30    276.15        74          75       12.90   \n",
+       "2        Riyadh  24.69   46.72    312.15        12          75        2.10   \n",
+       "3       Palauig  15.44  119.90    300.46        76         100        1.72   \n",
+       "4         Praia  14.92  -23.51    301.32        71          64        3.18   \n",
+       "\n",
+       "  Country        Date  \n",
+       "0      ZA  1600185697  \n",
+       "1      AR  1600185219  \n",
+       "2      SA  1600185136  \n",
+       "3      PH  1600185698  \n",
+       "4      CV  1600185698  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "data_file = os.path.join(\"..\",\"WeatherPy\",\"exports\",\"CityList.csv\")\n",
+    "work_df = pd.read_csv(data_file)\n",
+    "work_df = work_df.drop(['Unnamed: 0'], axis=1)\n",
+    "work_df.head()"
    ]
   },
   {
@@ -60,17 +181,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>magnitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>65.193300</td>\n",
+       "      <td>-149.072500</td>\n",
+       "      <td>1.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38.791832</td>\n",
+       "      <td>-122.780830</td>\n",
+       "      <td>2.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>38.818001</td>\n",
+       "      <td>-122.792168</td>\n",
+       "      <td>0.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33.601667</td>\n",
+       "      <td>-116.727667</td>\n",
+       "      <td>0.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37.378334</td>\n",
+       "      <td>-118.520836</td>\n",
+       "      <td>3.64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    latitude   longitude  magnitude\n",
+       "0  65.193300 -149.072500       1.70\n",
+       "1  38.791832 -122.780830       2.10\n",
+       "2  38.818001 -122.792168       0.48\n",
+       "3  33.601667 -116.727667       0.78\n",
+       "4  37.378334 -118.520836       3.64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gmaps.datasets\n",
+    "gmaps.configure(g_key)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d5edfaeeee1747d88a46ceab6581b173",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "locations = work_df[['Lat', 'Lng']]\n",
+    "weights = work_df['Humidity']\n",
+    "fig = gmaps.figure()\n",
+    "fig.add_layer(gmaps.heatmap_layer(locations, weights=weights))\n",
+    "fig"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,10 +303,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(24, 9)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Narrow down the DataFrame to find your ideal weather condition. For example:\n",
+    "#A max temperature lower than 80 degrees but higher than 70.\n",
+    "#Wind speed less than 10 mph.\n",
+    "#Zero cloudiness.\n",
+    "work_df_filtered = work_df[work_df[\"Max Temp\"] < 300] #degrees are in Kelvin, need to go back and fix. 300 Kelvin is close to 80 degrees F\n",
+    "work_df_filtered = work_df_filtered[work_df_filtered[\"Max Temp\"] > 294] #degrees are in Kelvin, need to go back and fix. 294 Kelvin is close to 70 degrees F\n",
+    "work_df_filtered = work_df_filtered[work_df_filtered[\"Wind Speed\"]<= 10]\n",
+    "work_df_filtered = work_df_filtered[work_df_filtered[\"Humidity\"]<= 60]\n",
+    "work_df_filtered.shape\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,14 +348,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# geocoordinates for the base of our search\n",
+    "target_location = \"29.714033,-95.406480\" # coordinates\n",
+    "\n",
+    "# distance, IN METERS, within which the place results must live\n",
+    "target_radius = 5000\n",
+    "\n",
+    "# keyword term to be matched against all of Google's indexed content\n",
+    "#target_keyword = \"Chinese\"\n",
+    "\n",
+    "# type of establishment that we'd like to use to filter our place results\n",
+    "target_type = \"hotel\"\n",
+    "\n",
+    "# base url\n",
+    "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "# set up a dictionary to store all query parameters\n",
+    "params = {\n",
+    "    \"location\": target_location,\n",
+    "#    \"keyword\": target_keyword,\n",
+    "    \"radius\": target_radius,\n",
+    "#     \"rankby\": \"distance\",\n",
+    "    \"type\": target_type,\n",
+    "    \"key\": g_key\n",
+    "}\n",
+    "\n",
+    "# run a request using our params dictionary\n",
+    "response = requests.get(base_url, params=params)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "marker_locations = [\n",
+    "    (-34.0, -59.166672),\n",
+    "    (-32.23333, -64.433327),\n",
+    "    (40.166672, 44.133331),\n",
+    "    (51.216671, 5.0833302),\n",
+    "    (51.333328, 4.25)\n",
+    "]\n",
+    "\n",
+    "fig = gmaps.figure()\n",
+    "markers = gmaps.marker_layer(marker_locations)\n",
+    "fig.add_layer(markers)\n",
+    "fig"
+   ]
   },
   {
    "cell_type": "code",
@@ -159,9 +442,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pydev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
