part 2 completed, have to clean up some config in part 1

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "import requests\n",
     "import gmaps\n",
     "import os\n",
+    "from pprint import pprint\n",
     "\n",
     "# Import API key\n",
     "from api_keys import g_key"
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +158,7 @@
        "4      CV  1600185698  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,84 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>magnitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>65.193300</td>\n",
-       "      <td>-149.072500</td>\n",
-       "      <td>1.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>38.791832</td>\n",
-       "      <td>-122.780830</td>\n",
-       "      <td>2.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>38.818001</td>\n",
-       "      <td>-122.792168</td>\n",
-       "      <td>0.48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>33.601667</td>\n",
-       "      <td>-116.727667</td>\n",
-       "      <td>0.78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>37.378334</td>\n",
-       "      <td>-118.520836</td>\n",
-       "      <td>3.64</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    latitude   longitude  magnitude\n",
-       "0  65.193300 -149.072500       1.70\n",
-       "1  38.791832 -122.780830       2.10\n",
-       "2  38.818001 -122.792168       0.48\n",
-       "3  33.601667 -116.727667       0.78\n",
-       "4  37.378334 -118.520836       3.64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gmaps.datasets\n",
     "gmaps.configure(g_key)"
@@ -266,13 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5edfaeeee1747d88a46ceab6581b173",
+       "model_id": "54f917ebd5d74a4e8e1cfb5c23767fa3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +238,7 @@
        "(24, 9)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,54 +271,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# geocoordinates for the base of our search\n",
-    "target_location = \"29.714033,-95.406480\" # coordinates\n",
-    "\n",
-    "# distance, IN METERS, within which the place results must live\n",
-    "target_radius = 5000\n",
-    "\n",
-    "# keyword term to be matched against all of Google's indexed content\n",
-    "#target_keyword = \"Chinese\"\n",
-    "\n",
-    "# type of establishment that we'd like to use to filter our place results\n",
-    "target_type = \"hotel\"\n",
-    "\n",
-    "# base url\n",
-    "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
-    "\n",
-    "# set up a dictionary to store all query parameters\n",
-    "params = {\n",
-    "    \"location\": target_location,\n",
-    "#    \"keyword\": target_keyword,\n",
-    "    \"radius\": target_radius,\n",
-    "#     \"rankby\": \"distance\",\n",
-    "    \"type\": target_type,\n",
-    "    \"key\": g_key\n",
-    "}\n",
-    "\n",
-    "# run a request using our params dictionary\n",
-    "response = requests.get(base_url, params=params)"
+    "locations_lat = work_df_filtered['Lat'].to_list()\n",
+    "locations_lng = work_df_filtered['Lng'].to_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "marker_locations = [\n",
-    "    (-34.0, -59.166672),\n",
-    "    (-32.23333, -64.433327),\n",
-    "    (40.166672, 44.133331),\n",
-    "    (51.216671, 5.0833302),\n",
-    "    (51.333328, 4.25)\n",
-    "]\n",
+    "result_lat = []\n",
+    "result_lng = []\n",
+    "result_name = []\n",
     "\n",
-    "fig = gmaps.figure()\n",
+    "for i in range(0,len(locations_lat)):\n",
+    "#for i in range(0,1):\n",
+    "    # geocoordinates for the base of our search\n",
+    "    target_location = str(f\"{locations_lat[i]},{locations_lng[i]}\") # coordinates\n",
+    "#target_location = \"-28.78,32.04\"\n",
+    "# distance, IN METERS, within which the place results must live\n",
+    "    target_radius = 5000\n",
+    "\n",
+    "# type of establishment that we'd like to use to filter our place results\n",
+    "    target_type = \"hotel\"\n",
+    "\n",
+    "# base url\n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "# set up a dictionary to store all query parameters\n",
+    "    params = {\n",
+    "        \"location\": target_location,\n",
+    "#    \"keyword\": target_keyword,\n",
+    "        \"radius\": target_radius,\n",
+    "#     \"rankby\": \"distance\",\n",
+    "        \"type\": target_type,\n",
+    "        \"key\": g_key\n",
+    "}\n",
+    "\n",
+    "# run a request using our params dictionary\n",
+    "    response = requests.get(base_url, params=params)\n",
+    "    response_json = response.json()\n",
+    "    result_lat.append(response_json['results'][0]['geometry'][\"location\"][\"lat\"])\n",
+    "    result_lng.append(response_json['results'][0]['geometry'][\"location\"][\"lng\"])\n",
+    "    result_name.append(response_json['results'][0]['name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(38.7339162, -27.0646976),\n",
+       " (40.37338020000001, 71.7978333),\n",
+       " (37.3088512, 13.5857528),\n",
+       " (30.15, 62.6),\n",
+       " (-20.7255748, 139.4927085),\n",
+       " (38.53484470000001, -28.6299812),\n",
+       " (38.4361809, 57.42878990000001),\n",
+       " (-7.835802600000001, -79.1612026),\n",
+       " (-24.8055504, -49.9981634),\n",
+       " (37.7157269, -25.4345063),\n",
+       " (45.8586463, 34.049527),\n",
+       " (44.1689119, 66.7337284),\n",
+       " (41.3019341, 20.8299599),\n",
+       " (38.4894305, 47.0683575),\n",
+       " (33.0603333, -16.3338703),\n",
+       " (39.21906079999999, -121.0610606),\n",
+       " (37.7394207, -25.6686725),\n",
+       " (38.401758, 33.412793),\n",
+       " (37.7394207, -25.6686725),\n",
+       " (37.0965278, -113.5684164),\n",
+       " (48.91731799999999, -1.194829),\n",
+       " (35.6224561, -117.6708966),\n",
+       " (44.8832511, 39.1889994),\n",
+       " (21.4100372, -103.1178151)]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_coord = zip(result_lat,result_lng)\n",
+    "result_coord = list(result_coord)\n",
+    "result_coord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a3c340f79a844a2bce38e63747b6b7c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "marker_locations = result_coord\n",
+    "\n",
+    "#fig = gmaps.figure()\n",
     "markers = gmaps.marker_layer(marker_locations)\n",
     "fig.add_layer(markers)\n",
     "fig"
@@ -400,24 +397,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#I can't get any of this to work\n",
+    "\n",
+    "#keys = ['hotel name', 'location']\n",
+    "#values = [str(result_name),str(result_coord)]\n",
+    "#tag_dict = dict(zip(keys, values))\n",
+    "\n",
+    "\n",
+    "#hotel_locations = [row['location'] for row in tag_dict]\n",
     "# NOTE: Do not change any of the code in this cell\n",
     "\n",
     "# Using the template add the hotel marks to the heatmap\n",
-    "info_box_template = \"\"\"\n",
-    "<dl>\n",
-    "<dt>Name</dt><dd>{Hotel Name}</dd>\n",
-    "<dt>City</dt><dd>{City}</dd>\n",
-    "<dt>Country</dt><dd>{Country}</dd>\n",
-    "</dl>\n",
-    "\"\"\"\n",
+    "\n",
+    "#cannot see City or Country as an output in the API\n",
+    "#info_box_template = \"\"\"\n",
+    "#<dl>\n",
+    "#<dt>Name</dt><dd>{Hotel Name}</dd>\n",
+    "#<dt>City</dt><dd></dd></dd>\n",
+    "#<dt>Country</dt><dd></dd></dd>\n",
+    "#</dl>\n",
+    "#\"\"\"\n",
     "# Store the DataFrame Row\n",
     "# NOTE: be sure to update with your DataFrame name\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
-    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
+    "    #plant_info = [info_box_template.format(**plant) for plant in nuclear_power_plants]\n",
+    "#hotel_info = [info_box_template.format(**row) for row in hotel_locations]\n",
+    "#locations = work_df_filtered[[\"Lat\", \"Lng\"]]\n",
+    "#fig = gmaps.figure()\n",
+    "#fig.add_layer(marker_layer)\n",
+    "#fig"
    ]
   },
   {
