temp data corrected, ready to turn in

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -80,85 +80,85 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Richards Bay</td>\n",
-       "      <td>-28.78</td>\n",
-       "      <td>32.04</td>\n",
-       "      <td>291.82</td>\n",
-       "      <td>71</td>\n",
-       "      <td>74</td>\n",
-       "      <td>2.73</td>\n",
-       "      <td>ZA</td>\n",
-       "      <td>1600185697</td>\n",
+       "      <td>Ribeira Grande</td>\n",
+       "      <td>38.52</td>\n",
+       "      <td>-28.70</td>\n",
+       "      <td>62.600</td>\n",
+       "      <td>67</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>1600323578</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Ushuaia</td>\n",
-       "      <td>-54.80</td>\n",
-       "      <td>-68.30</td>\n",
-       "      <td>276.15</td>\n",
-       "      <td>74</td>\n",
-       "      <td>75</td>\n",
-       "      <td>12.90</td>\n",
-       "      <td>AR</td>\n",
-       "      <td>1600185219</td>\n",
+       "      <td>Bluff</td>\n",
+       "      <td>-46.60</td>\n",
+       "      <td>168.33</td>\n",
+       "      <td>46.004</td>\n",
+       "      <td>70</td>\n",
+       "      <td>88</td>\n",
+       "      <td>6.26</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>1600323328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Riyadh</td>\n",
-       "      <td>24.69</td>\n",
-       "      <td>46.72</td>\n",
-       "      <td>312.15</td>\n",
-       "      <td>12</td>\n",
-       "      <td>75</td>\n",
-       "      <td>2.10</td>\n",
-       "      <td>SA</td>\n",
-       "      <td>1600185136</td>\n",
+       "      <td>Mataura</td>\n",
+       "      <td>-46.19</td>\n",
+       "      <td>168.86</td>\n",
+       "      <td>46.004</td>\n",
+       "      <td>70</td>\n",
+       "      <td>100</td>\n",
+       "      <td>6.26</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>1600323578</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Palauig</td>\n",
-       "      <td>15.44</td>\n",
-       "      <td>119.90</td>\n",
-       "      <td>300.46</td>\n",
+       "      <td>Nikolskoye</td>\n",
+       "      <td>59.70</td>\n",
+       "      <td>30.79</td>\n",
+       "      <td>51.800</td>\n",
        "      <td>76</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>1600185698</td>\n",
+       "      <td>75</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1600323579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Praia</td>\n",
-       "      <td>14.92</td>\n",
-       "      <td>-23.51</td>\n",
-       "      <td>301.32</td>\n",
-       "      <td>71</td>\n",
-       "      <td>64</td>\n",
-       "      <td>3.18</td>\n",
-       "      <td>CV</td>\n",
-       "      <td>1600185698</td>\n",
+       "      <td>Pevek</td>\n",
+       "      <td>69.70</td>\n",
+       "      <td>170.31</td>\n",
+       "      <td>35.348</td>\n",
+       "      <td>96</td>\n",
+       "      <td>100</td>\n",
+       "      <td>6.25</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1600323579</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           City    Lat     Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
-       "0  Richards Bay -28.78   32.04    291.82        71          74        2.73   \n",
-       "1       Ushuaia -54.80  -68.30    276.15        74          75       12.90   \n",
-       "2        Riyadh  24.69   46.72    312.15        12          75        2.10   \n",
-       "3       Palauig  15.44  119.90    300.46        76         100        1.72   \n",
-       "4         Praia  14.92  -23.51    301.32        71          64        3.18   \n",
+       "             City    Lat     Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
+       "0  Ribeira Grande  38.52  -28.70    62.600        67          20        2.10   \n",
+       "1           Bluff -46.60  168.33    46.004        70          88        6.26   \n",
+       "2         Mataura -46.19  168.86    46.004        70         100        6.26   \n",
+       "3      Nikolskoye  59.70   30.79    51.800        76          75        3.00   \n",
+       "4           Pevek  69.70  170.31    35.348        96         100        6.25   \n",
        "\n",
        "  Country        Date  \n",
-       "0      ZA  1600185697  \n",
-       "1      AR  1600185219  \n",
-       "2      SA  1600185136  \n",
-       "3      PH  1600185698  \n",
-       "4      CV  1600185698  "
+       "0      PT  1600323578  \n",
+       "1      NZ  1600323328  \n",
+       "2      NZ  1600323578  \n",
+       "3      RU  1600323579  \n",
+       "4      RU  1600323579  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,13 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54f917ebd5d74a4e8e1cfb5c23767fa3",
+       "model_id": "b415eaa144f64703b4ac4c3b3bc4510b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,16 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(24, 9)"
+       "(21, 9)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,9 +248,9 @@
     "#A max temperature lower than 80 degrees but higher than 70.\n",
     "#Wind speed less than 10 mph.\n",
     "#Zero cloudiness.\n",
-    "work_df_filtered = work_df[work_df[\"Max Temp\"] < 300] #degrees are in Kelvin, need to go back and fix. 300 Kelvin is close to 80 degrees F\n",
-    "work_df_filtered = work_df_filtered[work_df_filtered[\"Max Temp\"] > 294] #degrees are in Kelvin, need to go back and fix. 294 Kelvin is close to 70 degrees F\n",
-    "work_df_filtered = work_df_filtered[work_df_filtered[\"Wind Speed\"]<= 10]\n",
+    "work_df_filtered = work_df[work_df[\"Max Temp\"] < 80] #degrees are in Kelvin, need to go back and fix. 300 Kelvin is close to 80 degrees F\n",
+    "work_df_filtered = work_df_filtered[work_df_filtered[\"Max Temp\"] > 70] #degrees are in Kelvin, need to go back and fix. 294 Kelvin is close to 70 degrees F\n",
+    "work_df_filtered = work_df_filtered[work_df_filtered[\"Wind Speed\"]<= 15]\n",
     "work_df_filtered = work_df_filtered[work_df_filtered[\"Humidity\"]<= 60]\n",
     "work_df_filtered.shape\n",
     "\n"
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,58 +323,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(38.7339162, -27.0646976),\n",
-       " (40.37338020000001, 71.7978333),\n",
-       " (37.3088512, 13.5857528),\n",
-       " (30.15, 62.6),\n",
-       " (-20.7255748, 139.4927085),\n",
-       " (38.53484470000001, -28.6299812),\n",
-       " (38.4361809, 57.42878990000001),\n",
-       " (-7.835802600000001, -79.1612026),\n",
-       " (-24.8055504, -49.9981634),\n",
-       " (37.7157269, -25.4345063),\n",
-       " (45.8586463, 34.049527),\n",
-       " (44.1689119, 66.7337284),\n",
-       " (41.3019341, 20.8299599),\n",
-       " (38.4894305, 47.0683575),\n",
-       " (33.0603333, -16.3338703),\n",
-       " (39.21906079999999, -121.0610606),\n",
-       " (37.7394207, -25.6686725),\n",
-       " (38.401758, 33.412793),\n",
-       " (37.7394207, -25.6686725),\n",
-       " (37.0965278, -113.5684164),\n",
-       " (48.91731799999999, -1.194829),\n",
-       " (35.6224561, -117.6708966),\n",
-       " (44.8832511, 39.1889994),\n",
-       " (21.4100372, -103.1178151)]"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result_coord = zip(result_lat,result_lng)\n",
     "result_coord = list(result_coord)\n",
-    "result_coord"
+    "#result_coord"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a3c340f79a844a2bce38e63747b6b7c",
+       "model_id": "b415eaa144f64703b4ac4c3b3bc4510b",
        "version_major": 2,
        "version_minor": 0
       },
